// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test CCMovelMultSignRequest 1`] = `
<span
  style={
    Object {
      "flexDirection": "row",
    }
  }
  unstable__transformChildren={[Function]}
>
  CCMovelMultSignRequest
  : 
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    200
  </span>
   
  User does not have signature active
</span>
`;

exports[`Test CCMovelMultSignRequest_erro 1`] = `
Array [
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    <span
      style={
        Object {
          "flexDirection": "row",
        }
      }
      unstable__transformChildren={[Function]}
    >
      No user passed, use --user="XXX 000000000"
    </span>
  </span>,
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    <span
      style={
        Object {
          "flexDirection": "row",
        }
      }
      unstable__transformChildren={[Function]}
    >
      No docNames passed, use --docNames="xxxx.pdf","yyyy.pdf"
    </span>
  </span>,
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    <span
      style={
        Object {
          "flexDirection": "row",
        }
      }
      unstable__transformChildren={[Function]}
    >
      No pin passed, use --pin=xxxx
    </span>
  </span>,
]
`;

exports[`Test CCMovelSign 1`] = `
<span
  style={
    Object {
      "flexDirection": "row",
    }
  }
  unstable__transformChildren={[Function]}
>
  CCMovelSign
  : 
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    200
  </span>
   
  User does not have signature active
</span>
`;

exports[`Test CCMovelSign_erro 1`] = `
Array [
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    <span
      style={
        Object {
          "flexDirection": "row",
        }
      }
      unstable__transformChildren={[Function]}
    >
      No user passed, use --user="XXX 000000000"
    </span>
  </span>,
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    <span
      style={
        Object {
          "flexDirection": "row",
        }
      }
      unstable__transformChildren={[Function]}
    >
      No docName passed, use --docName="xxxx.pdf"
    </span>
  </span>,
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    <span
      style={
        Object {
          "flexDirection": "row",
        }
      }
      unstable__transformChildren={[Function]}
    >
      No pin passed, use --pin=xxxx
    </span>
  </span>,
]
`;

exports[`Test GetCertificate 1`] = `
<span
  style={
    Object {
      "flexDirection": "row",
    }
  }
  unstable__transformChildren={[Function]}
>
  GetCertificate
  : 
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    200
  </span>
   
</span>
`;

exports[`Test GetCertificate_erro 1`] = `
<span
  style={
    Object {
      "flexDirection": "row",
    }
  }
  unstable__transformChildren={[Function]}
>
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    No user passed, use --user="XXX 000000000"
  </span>
</span>
`;

exports[`Test ValidateOTP_erro 1`] = `
Array [
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    <span
      style={
        Object {
          "flexDirection": "row",
        }
      }
      unstable__transformChildren={[Function]}
    >
      No code passed, use --code=XXXX
    </span>
  </span>,
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    <span
      style={
        Object {
          "flexDirection": "row",
        }
      }
      unstable__transformChildren={[Function]}
    >
      No process id passed, use --processId1=XXXX
    </span>
  </span>,
]
`;
